@@ -37,8 +37,15 @@ namespace reroot
 class reroot::filename
 {
 	public:
+		// For getting reroot parameters.
+		static bool rerooting ();
+		static std::string const &get_false_root ();
+
 		// C'tor.  Compiler generated copy c'tor is sufficient.
 		filename (std::string const &name = "");
+
+		// For resetting filename.
+		void clear ();
 
 		// For setting filename.
 		void set_absolute (std::string const &name);
@@ -50,58 +57,53 @@ class reroot::filename
 		std::string const &get_original () const;
 		std::string const &get_rerooted () const;
 
+		// About filename.
+		bool is_excluded () const;
+		bool is_rerooted () const;
+
 		// For assigning filename.  Compiler generated copy assignment
 		// operator is sufficient.
 		filename const &operator = (std::string const &name);
 
-		// For getting reroot parameters.
-		static bool is_rerooted ();
-		static std::string const &get_false_root ();
-		static string_list const &get_exclude_path ();
-
 	private:
-		// Filename data.
-		mutable std::string absolute,
-		                    original,
-		                    rerooted;
+		// Possible filename statuses.
+		enum status_type
+		{
+			unknown,
+			excluded,
+			rerooted
+		};
 
 		// Reroot parameters.
 		static char const directory_delim = '/';
 		static std::string const false_root;
 		static string_list const exclude_path;
 
-		// For manipulating filenames.
-		static void add_working_directory (string_list &list);
-		static void make_absolute (std::string &absolute,
-			std::string const &original);
-		static void add_false_root (std::string &rerooted,
-			std::string const &absolute);
-		static void remove_false_root (std::string &absolute,
-			std::string const &rerooted);
-
 		// For initializing reroot parameters.
 		static void init_false_root ();
 		static void init_exclude_path ();
 		static void init_reroot ();
+
+		// Helper functions.
+		static bool check_exclude_path (std::string const &absolute);
+		static void add_working_directory (string_list &list);
+		static void make_absolute (std::string &absolute,
+			std::string const &original);
+
+		// Filename data.
+		mutable std::string absolute_name,
+		                    original_name,
+		                    rerooted_name;
+		mutable status_type status;
+
+		// For rerooting filenames.
+		void absolute_to_rerooted () const;
+		void rerooted_to_absolute () const;
 };
-
-// C'tor.  Set the original filename.
-inline
-reroot::filename::filename (std::string const &name):
-	original (name)
-{}
-
-// Set the original filename.
-inline reroot::filename const &
-reroot::filename::operator = (std::string const &name)
-{
-	set_original (name);
-	return *this;
-}
 
 // Return true if filenames are to be rerooted.
 inline bool
-reroot::filename::is_rerooted ()
+reroot::filename::rerooting ()
 {
 	static bool const rerooted = false_root.length ();
 	return rerooted;
@@ -114,11 +116,50 @@ reroot::filename::get_false_root ()
 	return false_root;
 }
 
-// Return the exclude path list as absolute filenames.
-inline reroot::string_list const &
-reroot::filename::get_exclude_path ()
+// C'tor.  Set the original filename.
+inline
+reroot::filename::filename (std::string const &name):
+	original_name (name),
+	status (unknown)
+{}
+
+// Set the absolute filename.  Clear other names.
+inline void
+reroot::filename::set_absolute (std::string const &name)
 {
-	return exclude_path;
+	clear ();
+	absolute_name = name;
+}
+
+// Set the original filename.  Clear other names.
+inline void
+reroot::filename::set_original (std::string const &name)
+{
+	clear ();
+	original_name = name;
+}
+
+// Set the rerooted filename.  Clear other names.
+inline void
+reroot::filename::set_rerooted (std::string const &name)
+{
+	clear ();
+	rerooted_name = name;
+}
+
+// Return true if filename is rerooted.
+inline bool
+reroot::filename::is_rerooted () const
+{
+	return !is_excluded ();
+}
+
+// Set the original filename.
+inline reroot::filename const &
+reroot::filename::operator = (std::string const &name)
+{
+	set_original (name);
+	return *this;
 }
 
 #endif
